<resources>
    <string name="app_name">BooKnowledge </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btlnhom3">Bài tập lớn Nhóm 3</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="thoat">Thoát</string>
    <string name="addtheloai">Thêm một thể loại </string>
    <string name="tieudetheloai">Tiêu đề thể loại mới</string>
    <string name="dongy">Đồng ý</string>
    <string name="timkiemtheloai">Tìm kiếm thể loại</string>
    <string name="trangchuAd">Trang chủ admin</string>
    <string name="trangchuuser">Trang chủ người dùng</string>
    <string name="quenmatkhau">Quên mật khẩu</string>
    <string name="email">Email</string>
    <string name="gui">Gửi</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="taotaikhoan">Tạo tài khoản</string>
    <string name="addsach">Thêm một quyển sách mới</string>
    <string name="tensach">Tên sách</string>
    <string name="mota">Mô tả</string>
    <string name="theloaisach">Thể loại sách</string>
    <string name="tailen">Tải lên</string>
    <string name="thongtinchitiet">Thông tin chi tiết</string>
    <string name="tieudesach">Tiêu đề sách</string>
    <string name="N_A">N/A</string>
    <string name="ngaydang">Ngày đăng</string>
    <string name="kichthuoc">Kích thước</string>
    <string name="luotxem">Lượt xem</string>
    <string name="luottai">Lượt tải</string>
    <string name="motacuasach">Mô tả của sách</string>
    <string name="Doc">Đọc</string>
    <string name="timkiem">Tìm kiếm</string>
    <string name="theloai">Thể Loại</string>
    <string name="thuvien">Thư viện</string>
    <string name="docsach">Đọc sách</string>
    <string name="n_n">N/N</string>
    <string name="chinhsuathongtin">Chỉnh sửa thông tin sách</string>
    <string name="capnhat">Cập nhật</string>
    <string name="hoten">Họ và tên</string>
    <string name="xacnhanmatkhau">Xác nhận mật khẩu</string>
    <string name="dangki">Đăng kí</string>
    <string name="tenapp">App Đọc sách</string>
    <string name="MB">13 MB</string>
    <string name="daymonthyear">dd/MM/yyyy</string>
    <string name="admin">ADMIN</string>
    <string name="TongUsers">Tổng users :</string>
    <string name="online">Online :</string>
    <string name="offline">Offline :</string>
    <string name="tacgia">Tác Giả</string>
    <string name="booknowledge">BooKnowledge</string>
    <string name="profile">Profile</string>
    <string name="cap_nhat">Cập Nhật</string>
</resources>