<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/back01">
    <RelativeLayout
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        >
        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:id="@+id/iconIv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:src="@drawable/logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iconIv"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:text="@string/dangnhap"
            android:textSize="30sp"
            />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="225dp"
        android:layout_marginEnd="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edittext01">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTil"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="20dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="20dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTil"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/emailTil"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="20dp"
                    android:hint="@string/matkhau"
                    android:inputType="textPassword"
                    android:padding="20dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgotTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordTil"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:text="@string/quenmatkhau" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgotTv"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_button01"
                android:text="@string/dangnhap"
                app:backgroundTint="@null" />

        </RelativeLayout>
    </ScrollView>

    <TextView
        android:id="@+id/noAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scv1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="187dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:text="@string/taotaikhoan"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/noAccount"
        android:text="version 1.0"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:textStyle="italic"
        android:textSize="10sp"
        android:textColor="@color/black"
        tools:ignore="DuplicateIds" />

</RelativeLayout>
