<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".CategoryAddActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="323dp"
        android:background="@drawable/shape_toolbar01">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:src="@drawable/ic_back"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/addtheloai"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </RelativeLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categoryTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"

        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="225dp">

        <EditText
            android:id="@+id/categoryEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edittext01"
            android:drawableStart="@drawable/ic_category_white"
            android:drawablePadding="10dp"
            android:hint="@string/tieudetheloai"
            android:inputType="textPersonName|textCapWords"
            android:padding="15dp"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="38dp"
        android:background="@drawable/shape_button01"
        app:backgroundTint="@null"
        android:text="@string/dongy"
        android:textColor="@color/white" />
</RelativeLayout>