<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    android:id="@+id/rootview"
    tools:context=".DashboardAdminActivity"
    >

    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_toolbar01">
        <TextView
            android:id="@+id/title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/admin"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/trangchuAd"
            android:textColor="@color/white"
            android:textSize="18sp" />


        <ImageButton
            android:id="@+id/profileBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/transparent"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:src="@drawable/ic_person_white"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />


        <ImageButton
            android:id="@+id/logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/transparent"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:src="@drawable/ic_power"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </RelativeLayout>


    <EditText
        android:id="@+id/searchEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarRL"
        android:layout_marginStart="5dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="5dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_search_white"
        android:hint="@string/timkiemtheloai"
        android:padding="10dp"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/CountUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/categoriesRV"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/TongUsers" />


    <TextView
        android:id="@+id/CountUsersOnline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/categoriesRV"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="210dp"
        android:text="@string/online" />

    <TextView
        android:id="@+id/CountUsersOffline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/categoriesRV"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="75dp"
        android:text="@string/offline" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoriesRV"
        android:layout_width="wrap_content"
        android:layout_height="512dp"
        android:layout_below="@id/searchEt"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="71dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/row_category" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addCategoryBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_above="@+id/addPdfFab"
        android:src="@drawable/ic_category_white"
        app:backgroundTint="@color/white"
        app:fabCustomSize="50dp"
        tools:ignore="SpeakableTextPresentCheck" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addPdfFab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_pdf_add_white"
        android:layout_above="@+id/addShowBtn"
        app:backgroundTint="@color/white"
        app:fabCustomSize="50dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addShowBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="19dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_add_white"
        app:backgroundTint="@color/white"
        app:fabCustomSize="50dp"
        tools:ignore="SpeakableTextPresentCheck" />
</RelativeLayout>