<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/back01">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/shape_toolbar01">

        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iconIv"
            android:layout_centerHorizontal="true"
            android:text="@string/taotaikhoan"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="5dp"
            android:src="@drawable/ic_back"
            tools:ignore="SpeakableTextPresentCheck" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="225dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edittext01">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTil"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/nameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="20dp"
                    android:hint="@string/hoten"
                    android:textColorHint="#BAA9A9"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:padding="20dp" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTil"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:hintEnabled="false"
                android:layout_below="@+id/nameTil"
                android:layout_margin="5dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_email"
                    android:id="@+id/emailEt"
                    android:drawablePadding="20dp"
                    android:hint="@string/email"
                    android:textColorHint="#BAA9A9"
                    android:textColor="@color/black"
                    android:inputType="textEmailAddress"
                    android:padding="20dp"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTil"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                android:layout_below="@+id/emailTil"
                >

                <EditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="20dp"
                    android:hint="@string/matkhau"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="#BAA9A9"
                    android:padding="20dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordTil"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                android:layout_below="@+id/passwordTil"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_lock"
                    android:id="@+id/confirmPasswordEt"
                    android:drawablePadding="20dp"
                    android:hint="@string/xacnhanmatkhau"
                    android:textColorHint="#BAA9A9"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:padding="20dp"
                    android:layout_margin="5dp"/>
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scv1"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/shape_button01"
        android:text="@string/dangki"
        app:backgroundTint="@null" />
</RelativeLayout>
